--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+#
+# mostly taken from: http://www.unwiredcouch.com/2013/11/15/my-tmux-setup.html?utm_source=hackernewsletter&utm_medium=email
+#
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
