Explicitly link/unlink config files.

--- a/tmux.conf
+++ b/tmux.conf
@@ -92,3 +92,7 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+# use ssh-agent via socket, see .ssh/rc
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
