--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ bind r source-file ~/.tmux.conf
 
 # start window numbering at 1 for easier switching
 set -g base-index 1
+set -g pane-base-index 1
+
+setw -g mode-keys vi
 
 # unicode
 setw -g utf8 on
