--- a/tmux.conf
+++ b/tmux.conf
@@ -99,3 +99,4 @@ set-window-option -g clock-mode-colour green #green
 # use ssh-agent via socket, see .ssh/rc
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
+set-option -g history-limit 30000
